--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
 <head>
   <title>Customer Support Panel</title>
 </head>
-<body>
+<body style="margin:0;padding:0">
  	<div id="root">
  	</div>
 </body> 	
